 * #10739: Move 'Back to Accounts' button to the contextual navigation
 * #10741: Provide email verification status indicator on user admin panel
 * #10742: Rename "Update" button to "Refresh" on Review Account Details page
 * #10745: Add 'Select all' checkbox to header of list in user admin panel
 * #11214: Rename db_cleanup to admin_db_cleanup
 * #11215: Set focus when admin Users page loads
 * add unit tests for db access functions
 * add account guard configuration to config admin panel
 * filter account list in user admin panel by account status
 * remake account editor following Trac admin panel style i.e. for enums


acct_mgr-0.4.4 (03-Apr-2014) - branch 0.11
 resolved issues
 * escape email for notification message against reported xss vulnerability


acct_mgr-0.4.3 (13-Feb-2013) - branch 0.11
 resolved issues
 * #8927: LoginModule with .htpasswd & passwd reset => not working
 * #10681: User with empty password can't reset their password
 * #10765: AttributeError: 'NoneType' object has no attribute 'strip'
 * #10871: AccountGuard destroys trac.ini
 * prevent two ways for a user to bypass a forced password change
 * skip BotTrapCheck on admin user requests, i.e. from inside user admin panel
 * keep trac.auth.LoginModule options defined after disabling that component
   by defining all options in acct_mgr.web_ui.LoginModule as well

 new features
 * allow logging-in into password-less accounts via acct_mgr.LoginModule


acct_mgr-0.4.2 (27-Dec-2012) - branch 0.11
 resolved issues
 * #10730: AccountGuard.lock_time effectively disables account locking


acct_mgr-0.4.1 (26-Dec-2012) - branch 0.11
 resolved issues
 * #5964: Prevent multiple calls to LoginModule._remote_user()
   by re-using a flag introduced for account locking
 * #8545: Authentication always fails
   by introducing authentication attempt debug logging and a new option
   'environ_auth_overwrite' for additional control over REMOTE_USER's value
 * #10134: HttpAuth login throws traceback